src/main/java/com/tc23/ReglasParser.java
// Generated from /home/jpcalcara/Escritorio/TC_2023/FinalTC/src/main/java/com/tc23/Reglas.g4 by ANTLR 4.9.2

    package com.tc23;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ReglasParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PA=1, PC=2, LA=3, LC=4, INT=5, FLOAT=6, DOUBLE=7, CHAR=8, VOID=9, FOR=10, 
		WHILE=11, DO=12, IF=13, ELSE=14, ELSE_IF=15, CARACTER=16, NUMERO=17, FLOTANTE=18, 
		SUMA=19, RESTA=20, MULTI=21, DIV=22, RESTO=23, INC=24, DEC=25, NOT=26, 
		PYC=27, COMA=28, MAYOR=29, MAYORIGUAL=30, MENOR=31, MENORIGUAL=32, DISTINTO=33, 
		IGUAL=34, AND=35, OR=36, RETORNO=37, ID=38, ASIGN=39, AC_POS=40, AC_NEG=41, 
		WS=42;
	public static final int
		RULE_tipos = 0, RULE_tipo_void = 1, RULE_constante = 2, RULE_comparacion = 3, 
		RULE_programa = 4, RULE_instrucciones = 5, RULE_instruccion = 6, RULE_declaracion_funcion = 7, 
		RULE_param_declaracion = 8, RULE_definicion_funcion = 9, RULE_param_definicion = 10, 
		RULE_funcion = 11, RULE_parametros = 12, RULE_retorno = 13, RULE_declaracion = 14, 
		RULE_lista_declaracion = 15, RULE_asignacion = 16, RULE_acumulacion = 17, 
		RULE_operaciones = 18, RULE_disyuncion = 19, RULE_conjuncion = 20, RULE_igualdad = 21, 
		RULE_expresion = 22, RULE_exp = 23, RULE_termino = 24, RULE_term = 25, 
		RULE_factor = 26, RULE_prefix = 27, RULE_postfix = 28, RULE_if_condicional = 29, 
		RULE_else_condicional = 30, RULE_ciclo_for = 31, RULE_ciclo_while = 32, 
		RULE_ciclo_do = 33, RULE_ambito = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"tipos", "tipo_void", "constante", "comparacion", "programa", "instrucciones", 
			"instruccion", "declaracion_funcion", "param_declaracion", "definicion_funcion", 
			"param_definicion", "funcion", "parametros", "retorno", "declaracion", 
			"lista_declaracion", "asignacion", "acumulacion", "operaciones", "disyuncion", 
			"conjuncion", "igualdad", "expresion", "exp", "termino", "term", "factor", 
			"prefix", "postfix", "if_condicional", "else_condicional", "ciclo_for", 
			"ciclo_while", "ciclo_do", "ambito"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'int'", "'float'", "'double'", "'char'", 
			"'void'", "'for'", "'while'", "'do'", "'if'", "'else'", "'else if'", 
			null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", 
			"'!'", "';'", "','", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", 
			"'||'", "'return'", null, "'='", "'+='", "'-='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PA", "PC", "LA", "LC", "INT", "FLOAT", "DOUBLE", "CHAR", "VOID", 
			"FOR", "WHILE", "DO", "IF", "ELSE", "ELSE_IF", "CARACTER", "NUMERO", 
			"FLOTANTE", "SUMA", "RESTA", "MULTI", "DIV", "RESTO", "INC", "DEC", "NOT", 
			"PYC", "COMA", "MAYOR", "MAYORIGUAL", "MENOR", "MENORIGUAL", "DISTINTO", 
			"IGUAL", "AND", "OR", "RETORNO", "ID", "ASIGN", "AC_POS", "AC_NEG", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Reglas.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReglasParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TiposContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ReglasParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(ReglasParser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(ReglasParser.DOUBLE, 0); }
		public TerminalNode CHAR() { return getToken(ReglasParser.CHAR, 0); }
		public TiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterTipos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitTipos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitTipos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TiposContext tipos() throws RecognitionException {
		TiposContext _localctx = new TiposContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tipos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_voidContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(ReglasParser.VOID, 0); }
		public Tipo_voidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_void; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterTipo_void(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitTipo_void(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitTipo_void(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_voidContext tipo_void() throws RecognitionException {
		Tipo_voidContext _localctx = new Tipo_voidContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo_void);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(VOID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstanteContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(ReglasParser.NUMERO, 0); }
		public TerminalNode FLOTANTE() { return getToken(ReglasParser.FLOTANTE, 0); }
		public TerminalNode CARACTER() { return getToken(ReglasParser.CARACTER, 0); }
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitConstante(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitConstante(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constante);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CARACTER) | (1L << NUMERO) | (1L << FLOTANTE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparacionContext extends ParserRuleContext {
		public TerminalNode MAYOR() { return getToken(ReglasParser.MAYOR, 0); }
		public TerminalNode MAYORIGUAL() { return getToken(ReglasParser.MAYORIGUAL, 0); }
		public TerminalNode MENOR() { return getToken(ReglasParser.MENOR, 0); }
		public TerminalNode MENORIGUAL() { return getToken(ReglasParser.MENORIGUAL, 0); }
		public TerminalNode DISTINTO() { return getToken(ReglasParser.DISTINTO, 0); }
		public TerminalNode IGUAL() { return getToken(ReglasParser.IGUAL, 0); }
		public ComparacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterComparacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitComparacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitComparacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparacionContext comparacion() throws RecognitionException {
		ComparacionContext _localctx = new ComparacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comparacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAYOR) | (1L << MAYORIGUAL) | (1L << MENOR) | (1L << MENORIGUAL) | (1L << DISTINTO) | (1L << IGUAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ReglasParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			instrucciones();
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitInstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instrucciones);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PA:
			case LA:
			case INT:
			case FLOAT:
			case DOUBLE:
			case CHAR:
			case VOID:
			case FOR:
			case WHILE:
			case DO:
			case IF:
			case CARACTER:
			case NUMERO:
			case FLOTANTE:
			case SUMA:
			case RESTA:
			case INC:
			case DEC:
			case NOT:
			case RETORNO:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				instruccion();
				setState(82);
				instrucciones();
				}
				break;
			case EOF:
			case LC:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public TerminalNode PYC() { return getToken(ReglasParser.PYC, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public AcumulacionContext acumulacion() {
			return getRuleContext(AcumulacionContext.class,0);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public If_condicionalContext if_condicional() {
			return getRuleContext(If_condicionalContext.class,0);
		}
		public AmbitoContext ambito() {
			return getRuleContext(AmbitoContext.class,0);
		}
		public Ciclo_forContext ciclo_for() {
			return getRuleContext(Ciclo_forContext.class,0);
		}
		public Ciclo_whileContext ciclo_while() {
			return getRuleContext(Ciclo_whileContext.class,0);
		}
		public Ciclo_doContext ciclo_do() {
			return getRuleContext(Ciclo_doContext.class,0);
		}
		public Declaracion_funcionContext declaracion_funcion() {
			return getRuleContext(Declaracion_funcionContext.class,0);
		}
		public Definicion_funcionContext definicion_funcion() {
			return getRuleContext(Definicion_funcionContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instruccion);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				declaracion();
				setState(88);
				match(PYC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				asignacion();
				setState(91);
				match(PYC);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				acumulacion();
				setState(94);
				match(PYC);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				operaciones();
				setState(97);
				match(PYC);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
				if_condicional();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				ambito();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(101);
				ciclo_for();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(102);
				ciclo_while();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(103);
				ciclo_do();
				setState(104);
				match(PYC);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(106);
				declaracion_funcion();
				setState(107);
				match(PYC);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(109);
				definicion_funcion();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(110);
				funcion();
				setState(111);
				match(PYC);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(113);
				retorno();
				setState(114);
				match(PYC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_funcionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ReglasParser.ID, 0); }
		public TerminalNode PA() { return getToken(ReglasParser.PA, 0); }
		public Param_declaracionContext param_declaracion() {
			return getRuleContext(Param_declaracionContext.class,0);
		}
		public TerminalNode PC() { return getToken(ReglasParser.PC, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public Tipo_voidContext tipo_void() {
			return getRuleContext(Tipo_voidContext.class,0);
		}
		public Declaracion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterDeclaracion_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitDeclaracion_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitDeclaracion_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_funcionContext declaracion_funcion() throws RecognitionException {
		Declaracion_funcionContext _localctx = new Declaracion_funcionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracion_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case DOUBLE:
			case CHAR:
				{
				setState(118);
				tipos();
				}
				break;
			case VOID:
				{
				setState(119);
				tipo_void();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(122);
			match(ID);
			setState(123);
			match(PA);
			setState(124);
			param_declaracion();
			setState(125);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_declaracionContext extends ParserRuleContext {
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public TerminalNode ID() { return getToken(ReglasParser.ID, 0); }
		public TerminalNode COMA() { return getToken(ReglasParser.COMA, 0); }
		public Param_declaracionContext param_declaracion() {
			return getRuleContext(Param_declaracionContext.class,0);
		}
		public Param_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterParam_declaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitParam_declaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitParam_declaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_declaracionContext param_declaracion() throws RecognitionException {
		Param_declaracionContext _localctx = new Param_declaracionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param_declaracion);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				tipos();
				setState(130);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(128);
					match(ID);
					}
					break;
				case PC:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				tipos();
				setState(135);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(133);
					match(ID);
					}
					break;
				case COMA:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(137);
				match(COMA);
				setState(138);
				param_declaracion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_funcionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ReglasParser.ID, 0); }
		public TerminalNode PA() { return getToken(ReglasParser.PA, 0); }
		public Param_definicionContext param_definicion() {
			return getRuleContext(Param_definicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(ReglasParser.PC, 0); }
		public AmbitoContext ambito() {
			return getRuleContext(AmbitoContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public Tipo_voidContext tipo_void() {
			return getRuleContext(Tipo_voidContext.class,0);
		}
		public Definicion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).enterDefinicion_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReglasListener ) ((ReglasListener)listener).exitDefinicion_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReglasVisitor ) return ((ReglasVisitor<? extends T>)visitor).visitDefinicion_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definicion_funcionContext definicion_funcion() throws RecognitionException {
		Definicion_funcionContext _localctx = new Definicion_funcionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_definicion_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case DOUBLE:
			case CHAR:
				{
				setState(143);
				tipos();
				}
				break;
			case VOID:
				{
				setState(144);
				tipo_void();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(147);
			match(ID);
			setState(148);
			match(PA);
			setState(149);
			param_definicion();
			setState(150);
			match(PC);
			setState(151);
			ambito();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
